# Chessboard

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Doxyfile.in  LICENSE  Makefile  README.md  chess_project  cmake_install.cmake  compile_commands.json  compile_flags.txt  main  test  test-level.sh
.cache/clangd/index/: bitboard.hpp.599A30C2F89D1D37.idx  board.hpp.30D10223B5B7A2EA.idx  chessboard.cpp.4C28DFD5424F49FA.idx  chessboard.hpp.0B130941867EB254.idx  controller.cpp.815D5970B1E427A1.idx  controller.hpp.9726D408503D5AE3.idx  main.cpp.C66808E392A74A7D.idx  multiplexer.hpp.F356DE6DC4596645.idx  noop_view.hpp.A26A96DE64F1A478.idx  player.hpp.EA478348A2080A26.idx  tui.cpp.166998B9FE77A6E5.idx  tui.cpp.8F6A7F9A4D4BDE65.idx  tui.hpp.9987B6BAA4ED8F20.idx  tui.hpp.E3FBD82A1361EBA8.idx  utils.hpp.E4624E5A36EF4269.idx  view.hpp.19630492CDFE7B7D.idx
Testing/Temporary/: CTestCostData.txt
include/: bitboard.hpp  board.hpp  chessboard.hpp  controller.hpp  piece.hpp  player.hpp  square.hpp  type.hpp  view.hpp
include/controller/: controller.hpp
include/logic/: bitboard.hpp  chessboard.hpp  utils.hpp
include/player/: player.hpp  player_bot.hpp  player_random.hpp  player_remote.hpp  player_tui.hpp  tui.hpp
include/view/: multiplexer.hpp  noop_view.hpp  tui.hpp  view.hpp  view_demulti.hpp  view_tui.hpp
src/: board.cpp  chessboard.cpp  main.cpp
src/controller/: controller.cpp
src/logic/: chessboard.cpp
src/player/: player_bot.cpp  player_random.cpp  player_remote.cpp  player_tui.cpp  tui.cpp
src/view/: tui.cpp  view_tui.cpp
